--- a/index.html
+++ b/index.html
@@ -8,7 +8,107 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/0b3c3fadbf.js" crossorigin="anonymous"></script>
+
 </head>
-<header>
-<h1>Omyfood</h1>
-</header>
+<body>
+<div class="main-container">
+    <header>
+        <div class="header__logo">
+            <img src="assets/images/logo/ohmyfood.png" alt="logo omyfood" class="logo">
+        </div>
+        <div class="header__location">
+            <i class="fa-solid fa-location-dot" style="color: #353535;"></i>
+            <p>Paris, Belleville</p>
+        </div>
+    </header>
+    <main>
+        <section class="hero">
+            <h1 class="hero__h1">Réservez le menu qui vous convient</h1>
+            <p class="hero__p">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
+            <button class="hero__button">
+                Explorez nos restaurants
+            </button>
+        </section>
+        <section class="choice">
+            <h2>Fonctionnement</h2>
+            <button class="button"><span class="button__number">1</span><i
+                    class="fa-solid fa-mobile-screen-button button__icon"></i>Choisir un restaurant
+            </button>
+            <button class="button"><span class="button__number">2</span><i class="fa-solid fa-list-ul button__icon"></i>Composer
+                votre menu
+            </button>
+            <button class="button"><span class="button__number">3</span><i class="fa-solid fa-store button__icon"></i>Déguster
+                un restaurant
+            </button>
+        </section>
+        <section class="restaurants">
+            <h2>
+                Restaurants
+            </h2>
+            <div class="restaurants__cards">
+                <a href="#" class="restaurants__card">
+                    <div class="card">
+                        <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant 1"
+                             class="restaurants__card__image">
+                        <div class="card-content1">
+                            <div class="card-content">
+                                <h3 class="restaurants__card__title">La palette du goût</h3>
+                                <p class="restaurants__card__txt">Charonne</p>
+                            </div>
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" class="restaurants__card">
+                    <div class="card">
+                        <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant 2"
+                             class="restaurants__card__image">
+                        <div class="card-content1">
+                            <div class="card-content">
+                                <h3 class="restaurants__card__title">La note enchantée</h3>
+                                <p class="restaurants__card__txt">Cité Rouge</p>
+                            </div>
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" class="restaurants__card">
+                    <div class="card">
+                        <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant 3"
+                             class="restaurants__card__image">
+                        <div class="card-content1">
+                            <div class="card-content">
+                                <h3 class="restaurants__card__title">La note enchantée</h3>
+                                <p class="restaurants__card__txt">Folie-Méricourt</p>
+                            </div>
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                        </div>
+                </a>
+                <a href="#" class="restaurants__card">
+                    <div class="card">
+                        <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                             alt="restaurant 4" class="restaurants__card__image">
+                        <div class="card-content1">
+                            <div class="card-content">
+                                <h3 class="restaurants__card__title">La note enchantée</h3>
+                                <p class="restaurants__card__txt">Le délice des sens</p>
+                            </div>
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                        </div>
+                </a>
+            </div>
+        </section>
+        <footer>
+            <img src="assets/images/logo/ohmyfood@2x.svg" alt="logo omyfood" class="footer-logo">
+            <p><i class="fa-solid fa-utensils fa-2xs"></i>Proposer un restaurant</p>
+            <p><i class="fas fa-hands-helping fa-2xs"></i>Devenir partenaire</p>
+            <p>Mentions légales</p>
+            <p>Contact</p>
+        </footer>
+
+    </main>
+</div>
+</body>
