correction animation css

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
                                 <h3 class="restaurants__card__title">La palette du goût</h3>
                                 <p class="restaurants__card__txt">Charonne</p>
                             </div>
-                            <i class="fa-regular fa-heart"></i>
+                            <div class="heart-container">
+                                <i class="fa-regular fa-heart heart-empty"></i>
+                                <i class="fa-solid fa-heart heart-full"></i>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -69,7 +72,10 @@
                                 <h3 class="restaurants__card__title">La note enchantée</h3>
                                 <p class="restaurants__card__txt">Cité Rouge</p>
                             </div>
-                            <i class="fa-regular fa-heart"></i>
+                            <div class="heart-container">
+                                <i class="fa-regular fa-heart heart-empty"></i>
+                                <i class="fa-solid fa-heart heart-full"></i>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -82,7 +88,10 @@
                                 <h3 class="restaurants__card__title">La note enchantée</h3>
                                 <p class="restaurants__card__txt">Folie-Méricourt</p>
                             </div>
-                            <i class="fa-regular fa-heart"></i>
+                            <div class="heart-container">
+                                <i class="fa-regular fa-heart heart-empty"></i>
+                                <i class="fa-solid fa-heart heart-full"></i>
+                            </div>
                         </div>
                         </div>
                 </a>
@@ -95,7 +104,10 @@
                                 <h3 class="restaurants__card__title">La note enchantée</h3>
                                 <p class="restaurants__card__txt">Le délice des sens</p>
                             </div>
-                            <i class="fa-regular fa-heart"></i>
+                            <div class="heart-container">
+                                <i class="fa-regular fa-heart heart-empty"></i>
+                                <i class="fa-solid fa-heart heart-full"></i>
+                            </div>
                         </div>
                         </div>
                 </a>
