--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
     <main>
         <section class="hero">
             <h1 class="hero__h1">Réservez le menu qui vous convient</h1>
-            <p class="hero__p">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
+            <p class="hero__p">Découvrez des restaurants d’exception,sélectionnés par nos soins.</p>
             <button class="hero__button">
                 Explorez nos restaurants
             </button>
         </section>
         <section class="choice">
             <h2>Fonctionnement</h2>
+            <div class="choice__container">
             <button class="button"><span class="button__number">1</span><i
                     class="fa-solid fa-mobile-screen-button button__icon"></i>Choisir un restaurant
             </button>
@@ -41,6 +42,7 @@
             <button class="button"><span class="button__number">3</span><i class="fa-solid fa-store button__icon"></i>Déguster
                 un restaurant
             </button>
+            </div>
         </section>
         <section class="restaurants">
             <h2>
@@ -114,11 +116,13 @@
             </div>
         </section>
         <footer>
-            <img src="assets/images/logo/ohmyfood@2x.svg" alt="logo omyfood" class="footer-logo">
-            <p><i class="fa-solid fa-utensils fa-2xs"></i>Proposer un restaurant</p>
-            <p><i class="fas fa-hands-helping fa-2xs"></i>Devenir partenaire</p>
-            <p>Mentions légales</p>
-            <p>Contact</p>
+            <nav>
+            <a href="#"><img src="assets/images/logo/ohmyfood@2x.svg" alt="logo omyfood" class="footer-logo"></a>
+            <a href="#"><p><i class="fa-solid fa-utensils fa-2xs"></i>Proposer un restaurant</p></a>
+            <a href="#"><p><i class="fas fa-hands-helping fa-2xs"></i>Devenir partenaire</p></a>
+            <a href="#"><p>Mentions légales</p></a>
+            <a href="#"><p>Contact</p></a>
+            </nav>
         </footer>
 
     </main>
