--- a/index.html
+++ b/index.html
@@ -1,130 +1,170 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Omyfood</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://kit.fontawesome.com/0b3c3fadbf.js" crossorigin="anonymous"></script>
-
-</head>
-<body>
-<div class="main-container">
-    <header>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/0b3c3fadbf.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class="main-container">
+      <header>
         <div class="header__logo">
-            <img src="assets/images/logo/ohmyfood.png" alt="logo omyfood" class="logo">
+          <img
+            src="assets/images/logo/ohmyfood.png"
+            alt="logo omyfood"
+            class="logo"
+          />
         </div>
         <div class="header__location">
-            <i class="fa-solid fa-location-dot" style="color: #353535;"></i>
-            <p>Paris, Belleville</p>
+          <i class="fa-solid fa-location-dot" style="color: #353535"></i>
+          <p>Paris, Belleville</p>
         </div>
-    </header>
-    <main>
+      </header>
+      <main>
         <section class="hero">
-            <h1 class="hero__h1">Réservez le menu qui vous convient</h1>
-            <p class="hero__p">Découvrez des restaurants d’exception,sélectionnés par nos soins.</p>
-            <button class="hero__button">
-                Explorez nos restaurants
-            </button>
+          <h1 class="hero__h1">Réservez le menu qui vous convient</h1>
+          <p class="hero__p">
+            Découvrez des restaurants d’exception,sélectionnés par nos soins.
+          </p>
+          <button class="hero__button">Explorez nos restaurants</button>
         </section>
         <section class="choice">
-            <h2>Fonctionnement</h2>
-            <div class="choice__container">
-            <button class="button"><span class="button__number">1</span><i
-                    class="fa-solid fa-mobile-screen-button button__icon"></i>Choisir un restaurant
+          <h2>Fonctionnement</h2>
+          <div class="choice__container">
+            <button class="button">
+              <span class="button__number">1</span
+              ><i class="fa-solid fa-mobile-screen-button button__icon"></i
+              >Choisir un restaurant
             </button>
-            <button class="button"><span class="button__number">2</span><i class="fa-solid fa-list-ul button__icon"></i>Composer
-                votre menu
+            <button class="button">
+              <span class="button__number">2</span
+              ><i class="fa-solid fa-list-ul button__icon"></i>Composer votre
+              menu
             </button>
-            <button class="button"><span class="button__number">3</span><i class="fa-solid fa-store button__icon"></i>Déguster
-                un restaurant
+            <button class="button">
+              <span class="button__number">3</span
+              ><i class="fa-solid fa-store button__icon"></i>Déguster un
+              restaurant
             </button>
-            </div>
+          </div>
         </section>
         <section class="restaurants">
-            <h2>
-                Restaurants
-            </h2>
-            <div class="restaurants__cards">
-                <a href="#" class="restaurants__card">
-                    <div class="card">
-                        <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant 1"
-                             class="restaurants__card__image">
-                        <div class="card-content1">
-                            <div class="card-content">
-                                <h3 class="restaurants__card__title">La palette du goût</h3>
-                                <p class="restaurants__card__txt">Charonne</p>
-                            </div>
-                            <div class="heart-container">
-                                <i class="fa-regular fa-heart heart-empty"></i>
-                                <i class="fa-solid fa-heart heart-full"></i>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-                <a href="#" class="restaurants__card">
-                    <div class="card">
-                        <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant 2"
-                             class="restaurants__card__image">
-                        <div class="card-content1">
-                            <div class="card-content">
-                                <h3 class="restaurants__card__title">La note enchantée</h3>
-                                <p class="restaurants__card__txt">Cité Rouge</p>
-                            </div>
-                            <div class="heart-container">
-                                <i class="fa-regular fa-heart heart-empty"></i>
-                                <i class="fa-solid fa-heart heart-full"></i>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-                <a href="#" class="restaurants__card">
-                    <div class="card">
-                        <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant 3"
-                             class="restaurants__card__image">
-                        <div class="card-content1">
-                            <div class="card-content">
-                                <h3 class="restaurants__card__title">La note enchantée</h3>
-                                <p class="restaurants__card__txt">Folie-Méricourt</p>
-                            </div>
-                            <div class="heart-container">
-                                <i class="fa-regular fa-heart heart-empty"></i>
-                                <i class="fa-solid fa-heart heart-full"></i>
-                            </div>
-                        </div>
-                        </div>
-                </a>
-                <a href="#" class="restaurants__card">
-                    <div class="card">
-                        <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                             alt="restaurant 4" class="restaurants__card__image">
-                        <div class="card-content1">
-                            <div class="card-content">
-                                <h3 class="restaurants__card__title">La note enchantée</h3>
-                                <p class="restaurants__card__txt">Le délice des sens</p>
-                            </div>
-                            <div class="heart-container">
-                                <i class="fa-regular fa-heart heart-empty"></i>
-                                <i class="fa-solid fa-heart heart-full"></i>
-                            </div>
-                        </div>
-                        </div>
-                </a>
-            </div>
+          <h2>Restaurants</h2>
+          <div class="restaurants__cards">
+            <a href="#" class="restaurants__card">
+              <div class="card">
+                <img
+                  src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                  alt="restaurant 1"
+                  class="restaurants__card__image"
+                />
+                <div class="card-content1">
+                  <div class="card-content">
+                    <h3 class="restaurants__card__title">La palette du goût</h3>
+                    <p class="restaurants__card__txt">Charonne</p>
+                  </div>
+                  <div class="heart-container">
+                    <i class="fa-regular fa-heart heart-empty"></i>
+                    <i class="fa-solid fa-heart heart-full"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#" class="restaurants__card">
+              <div class="card">
+                <img
+                  src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                  alt="restaurant 2"
+                  class="restaurants__card__image"
+                />
+                <div class="card-content1">
+                  <div class="card-content">
+                    <h3 class="restaurants__card__title">La note enchantée</h3>
+                    <p class="restaurants__card__txt">Cité Rouge</p>
+                  </div>
+                  <div class="heart-container">
+                    <i class="fa-regular fa-heart heart-empty"></i>
+                    <i class="fa-solid fa-heart heart-full"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#" class="restaurants__card">
+              <div class="card">
+                <img
+                  src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                  alt="restaurant 3"
+                  class="restaurants__card__image"
+                />
+                <div class="card-content1">
+                  <div class="card-content">
+                    <h3 class="restaurants__card__title">La note enchantée</h3>
+                    <p class="restaurants__card__txt">Folie-Méricourt</p>
+                  </div>
+                  <div class="heart-container">
+                    <i class="fa-regular fa-heart heart-empty"></i>
+                    <i class="fa-solid fa-heart heart-full"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+            <a href="#" class="restaurants__card">
+              <div class="card">
+                <img
+                  src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                  alt="restaurant 4"
+                  class="restaurants__card__image"
+                />
+                <div class="card-content1">
+                  <div class="card-content">
+                    <h3 class="restaurants__card__title">La note enchantée</h3>
+                    <p class="restaurants__card__txt">Le délice des sens</p>
+                  </div>
+                  <div class="heart-container">
+                    <i class="fa-regular fa-heart heart-empty"></i>
+                    <i class="fa-solid fa-heart heart-full"></i>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
         </section>
         <footer>
-            <nav>
-            <a href="#"><img src="assets/images/logo/ohmyfood@2x.svg" alt="logo omyfood" class="footer-logo"></a>
-            <a href="#"><p><i class="fa-solid fa-utensils fa-2xs"></i>Proposer un restaurant</p></a>
-            <a href="#"><p><i class="fas fa-hands-helping fa-2xs"></i>Devenir partenaire</p></a>
-            <a href="#"><p>Mentions légales</p></a>
-            <a href="#"><p>Contact</p></a>
-            </nav>
+          <nav class="footer-nav">
+            <a href="#"><img
+                src="assets/images/logo/ohmyfood@2x.svg"
+                alt="logo omyfood"
+                class="footer-logo"
+            /></a>
+            <div class="footer-nav__links">
+              <a href="#"
+                ><p>
+                  <i class="fa-solid fa-utensils fa-2xs"></i>Proposer un
+                  restaurant
+                </p></a
+              >
+              <a href="#"
+                ><p>
+                  <i class="fas fa-hands-helping fa-2xs"></i>Devenir partenaire
+                </p></a
+              >
+              <a href="#"><p>Mentions légales</p></a>
+              <a href="#"><p>Contact</p></a>
+            </div>
+          </nav>
         </footer>
-
-    </main>
-</div>
-</body>
+      </main>
+    </div>
+  </body>
+</html>
