--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section class="restaurants">
           <h2>Restaurants</h2>
           <div class="restaurants__cards">
-            <a href="#" class="restaurants__card">
+            <a href="palette.html" class="restaurants__card">
               <div class="card">
                 <img
                   src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
