--- a/palette.html
+++ b/palette.html
@@ -4,20 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Omyfood</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/palette.css" />
-    <script
-      src="https://kit.fontawesome.com/0b3c3fadbf.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/0b3c3fadbf.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <main-container>
+    <div class="main-container">
       <header>
         <div class="header__arrow">
           <i class="fa-solid fa-arrow-left fa-lg"></i>
@@ -30,6 +24,106 @@
           />
         </div>
       </header>
-    </main-container>
+      <main>
+        <section class="hero__img">
+          <img
+            src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            alt="hero"
+            class="hero__img" />
+        </section>
+        <section class="restaurants">
+          <div class="restaurants__card">
+            <div class="restaurants__card__title">
+              <h1>La palette du goût</h1>
+              <i class="fa-regular fa-heart fa-xl"></i>
+            </div>
+            <h2>ENTREES</h2>
+            <div class="restaurants__card__meals__container">
+              <div class="meal">
+                <div>
+                <h3>Fricassé d'escargots</h3>
+                <p>Au piment d'espelette</p>
+                </div>
+                <p>25€</p>
+              </div>
+              <div class="meal">
+                <div>
+                  <h3>Fricassé d'escargots</h3>
+                  <p>Au piment d'espelette</p>
+                </div>
+                  <p>25€</p>
+              </div>
+              <div class="meal">
+                <div>
+                  <h3>Fricassé d'escargots</h3>
+                  <p>Au piment d'espelette</p>
+                </div>
+                  <p>25€</p>
+              </div>
+            </div>  
+          </div>
+          <div class="restaurants__card">
+            <div class="restaurants__card__title">
+              <h1>La palette du goût</h1>
+              <i class="fa-regular fa-heart fa-xl"></i>
+            </div>
+            <h2>ENTREES</h2>
+            <div class="restaurants__card__meals__container">
+              <div class="meal">
+                <div>
+                <h3>Fricassé d'escargots</h3>
+                <p>Au piment d'espelette</p>
+                </div>
+                <p>25€</p>
+              </div>
+              <div class="meal">
+                <div>
+                  <h3>Fricassé d'escargots</h3>
+                  <p>Au piment d'espelette</p>
+                </div>
+                  <p>25€</p>
+              </div>
+              <div class="meal">
+                <div>
+                  <h3>Fricassé d'escargots</h3>
+                  <p>Au piment d'espelette</p>
+                </div>
+                  <p>25€</p>
+              </div>
+            </div>  
+          </div>
+          <div class="restaurants__card">
+            <div class="restaurants__card__title">
+              <h1>La palette du goût</h1>
+              <i class="fa-regular fa-heart fa-xl"></i>
+            </div>
+            <h2>ENTREES</h2>
+            <div class="restaurants__card__meals__container">
+              <div class="meal">
+                <div>
+                <h3>Fricassé d'escargots</h3>
+                <p>Au piment d'espelette</p>
+                </div>
+                <p>25€</p>
+              </div>
+              <div class="meal">
+                <div>
+                  <h3>Fricassé d'escargots</h3>
+                  <p>Au piment d'espelette</p>
+                </div>
+                  <p>25€</p>
+              </div>
+              <div class="meal">
+                <div>
+                  <h3>Fricassé d'escargots</h3>
+                  <p>Au piment d'espelette</p>
+                </div>
+                  <p>25€</p>
+              </div>
+            </div>  
+          </div>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
