--- a/palette.html
+++ b/palette.html
@@ -63,10 +63,6 @@
             </div>  
           </div>
           <div class="restaurants__card">
-            <div class="restaurants__card__title">
-              <h1>La palette du goût</h1>
-              <i class="fa-regular fa-heart fa-xl"></i>
-            </div>
             <h2>ENTREES</h2>
             <div class="restaurants__card__meals__container">
               <div class="meal">
@@ -93,10 +89,6 @@
             </div>  
           </div>
           <div class="restaurants__card">
-            <div class="restaurants__card__title">
-              <h1>La palette du goût</h1>
-              <i class="fa-regular fa-heart fa-xl"></i>
-            </div>
             <h2>ENTREES</h2>
             <div class="restaurants__card__meals__container">
               <div class="meal">
@@ -120,10 +112,36 @@
                 </div>
                   <p>25€</p>
               </div>
+            <div class="restaurants__button__container">
+              <button class="restaurants__button">Commander</button>
             </div>  
           </div>
         </section>
       </main>
+      <footer>
+        <nav class="footer-nav">
+          <a href="#"><img
+              src="assets/images/logo/ohmyfood@2x.svg"
+              alt="logo omyfood"
+              class="footer-logo"
+          /></a>
+          <div class="footer-nav__links">
+            <a href="#"
+              ><p>
+                <i class="fa-solid fa-utensils fa-2xs"></i>Proposer un
+                restaurant
+              </p></a
+            >
+            <a href="#"
+              ><p>
+                <i class="fas fa-hands-helping fa-2xs"></i>Devenir partenaire
+              </p></a
+            >
+            <a href="#"><p>Mentions légales</p></a>
+            <a href="#"><p>Contact</p></a>
+          </div>
+        </nav>
+      </footer>
     </div>
   </body>
 </html>
