--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
           <div class="choice__container">
             <button class="button">
               <span class="button__number">1</span
-              ><i class="fa-solid fa-mobile-screen-button button__icon"></i
-              >Choisir un restaurant
+              ><i class="fa-solid fa-mobile-screen-button"></i>Choisir un restaurant
             </button>
             <button class="button">
               <span class="button__number">2</span
@@ -62,13 +61,14 @@
         <section class="restaurants">
           <h2>Restaurants</h2>
           <div class="restaurants__cards">
-            <a href="palette.html" class="restaurants__card">
+            <a href="palette" class="restaurants__card">
               <div class="card">
                 <img
                   src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                   alt="restaurant 1"
                   class="restaurants__card__image"
                 />
+                <p class="img__p">Nouveau</p>
                 <div class="card-content1">
                   <div class="card-content">
                     <h3 class="restaurants__card__title">La palette du goût</h3>
@@ -88,6 +88,7 @@
                   alt="restaurant 2"
                   class="restaurants__card__image"
                 />
+                <p class="img__p">Nouveau</p>
                 <div class="card-content1">
                   <div class="card-content">
                     <h3 class="restaurants__card__title">La note enchantée</h3>
