--- a/palette/index.html
+++ b/palette/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/palette.css" />
+    <link rel="stylesheet" href="../assets/css/palette.css" />
     <script src="https://kit.fontawesome.com/0b3c3fadbf.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -18,7 +18,7 @@
         </div>
         <div class="header__logo">
           <img
-            src="assets/images/logo/ohmyfood.png"
+            src="../assets/images/logo/ohmyfood.png"
             alt="logo omyfood"
             class="logo"
           />
@@ -27,13 +27,13 @@
       <main>
         <section class="hero__img">
           <img
-            src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
             alt="hero"
             class="hero__img" />
         </section>
         <section class="restaurants">
-          <div class="restaurants__card">
-            <div class="restaurants__card__title">
+          <div class="restaurants__card section entrees">
+            <div class="restaurants__card__title ">
               <h1>La palette du goût</h1>
               <i class="fa-regular fa-heart fa-xl"></i>
             </div>
@@ -44,73 +44,73 @@
                 <h3>Fricassé d'escargots</h3>
                 <p>Au piment d'espelette</p>
                 </div>
-                <p>25€</p>
+                <p class="img__price">25€</p>
               </div>
               <div class="meal">
                 <div>
                   <h3>Fricassé d'escargots</h3>
                   <p>Au piment d'espelette</p>
                 </div>
-                  <p>25€</p>
+                  <p class="img__price">25€</p>
               </div>
               <div class="meal">
                 <div>
                   <h3>Fricassé d'escargots</h3>
                   <p>Au piment d'espelette</p>
                 </div>
-                  <p>25€</p>
+                  <p class="img__price">25€</p>
               </div>
             </div>  
           </div>
-          <div class="restaurants__card">
-            <h2>ENTREES</h2>
+          <div class="restaurants__card section plats">
+            <h2 class="">PLATS</h2>
             <div class="restaurants__card__meals__container">
               <div class="meal">
                 <div>
                 <h3>Fricassé d'escargots</h3>
                 <p>Au piment d'espelette</p>
                 </div>
-                <p>25€</p>
+                <p class="img__price">25€</p>
               </div>
               <div class="meal">
                 <div>
                   <h3>Fricassé d'escargots</h3>
                   <p>Au piment d'espelette</p>
                 </div>
-                  <p>25€</p>
+                  <p class="img__price">25€</p>
               </div>
               <div class="meal">
                 <div>
                   <h3>Fricassé d'escargots</h3>
                   <p>Au piment d'espelette</p>
                 </div>
-                  <p>25€</p>
+                  <p class="img__price">25€</p>
               </div>
             </div>  
           </div>
-          <div class="restaurants__card">
-            <h2>ENTREES</h2>
+          <div class="restaurants__card section desserts">
+            <h2 class="">DESSERTS</h2>
             <div class="restaurants__card__meals__container">
               <div class="meal">
                 <div>
                 <h3>Fricassé d'escargots</h3>
                 <p>Au piment d'espelette</p>
                 </div>
-                <p>25€</p>
+                <p class="img__price">25€</p>
               </div>
               <div class="meal">
                 <div>
                   <h3>Fricassé d'escargots</h3>
                   <p>Au piment d'espelette</p>
                 </div>
-                  <p>25€</p>
+                  <p class="img__price">25€</p>
               </div>
               <div class="meal">
                 <div>
                   <h3>Fricassé d'escargots</h3>
                   <p>Au piment d'espelette</p>
                 </div>
-                  <p>25€</p>
+                  <p class="img__price">25€</p>
               </div>
             <div class="restaurants__button__container">
               <button class="restaurants__button">Commander</button>
@@ -121,7 +121,7 @@
       <footer>
         <nav class="footer-nav">
           <a href="#"><img
-              src="assets/images/logo/ohmyfood@2x.svg"
+              src="../assets/images/logo/ohmyfood@2x.svg"
               alt="logo omyfood"
               class="footer-logo"
           /></a>
