--- a/delice/index.html
+++ b/delice/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/palette.css" />
+    <link rel="stylesheet" href="../assets/css/restaurants/palette.css" />
     <script src="https://kit.fontawesome.com/0b3c3fadbf.js" crossorigin="anonymous"></script>
   </head>
   <body>
