--- a/palette/index.html
+++ b/palette/index.html
@@ -14,7 +14,7 @@
     <div class="main-container">
       <header>
         <nav class="header__arrow">
-          <a href="/index"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
+          <a href="./index"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
         </nav>
         <div class="header__logo">
           <img
