--- a/delice/index.html
+++ b/delice/index.html
@@ -14,7 +14,7 @@
     <div class="main-container">
       <header>
         <nav class="header__arrow">
-          <a href="/"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
+          <a href="../index.html"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
         </nav>
         <div class="header__logo">
           <img
@@ -164,7 +164,7 @@
               </p></a
             >
             <a href="#"><p>Mentions légales</p></a>
-            <a href="#"><p>Contact</p></a>
+            <a href="mailto:votre.adresse@email.com"><p>Contact</p></a>
           </div>
         </nav>
       </footer>
