--- a/note/index.html
+++ b/note/index.html
@@ -178,7 +178,7 @@
               </p></a
             >
             <a href="#"><p>Mentions légales</p></a>
-            <a href="#"><p>Contact</p></a>
+            <a href="mailto:votre.adresse@email.com"><p>Contact</p></a>
           </div>
         </nav>
       </footer>
