--- a/note/index.html
+++ b/note/index.html
@@ -152,6 +152,7 @@
                 <p class="img__price">25€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
+            </div>
             <div class="restaurants__button__container">
               <button class="restaurants__button">Commander</button>
             </div>  
