--- a/delice/index.html
+++ b/delice/index.html
@@ -138,6 +138,7 @@
                 <p class="img__price">23€</p>
                 <i class="fa-solid fa-circle-check meal__check"></i>
               </div>
+            </div>
             <div class="restaurants__button__container">
               <button class="restaurants__button">Commander</button>
             </div>  
